# magic-manager

./: .gitignore  CLAUDE.md  pyproject.toml
.claude/: settings.json
.claude/commands/: cleanup-queries.md  clear-queries.md  ingest-new-inventory-list.md
.claude/hooks/: mtgjson-guard.sh  scryfall-guard.sh
.claude/skills/bulk-add/: SKILL.md
.claude/skills/characterize-set/: SKILL.md
.claude/skills/compose-deck/: SKILL.md
.claude/skills/decompose-deck/: SKILL.md
.claude/skills/export-list/: SKILL.md
.claude/skills/foil-diff/: SKILL.md
.claude/skills/generate-set-list/: SKILL.md
.claude/skills/import-list/: SKILL.md
.claude/skills/import-precon/: SKILL.md
.claude/skills/inventory-query/: SKILL.md
.claude/skills/missing-from-set/: SKILL.md
.claude/skills/mtgjson-search/: SKILL.md  mtgjson.sh
.claude/skills/scryfall-search/: SKILL.md  scryfall.sh
docs/: card-organization-system.md  ltr-borderless-scenes.md  mtgjson-precon-attribution.md  pre-v2-inventory-snapshot.md  scryfall-printing-treatments.md  scryfall-set-families-and-bonus-sheets.md  spg-source-attribution.md
docs/sets/: _TEMPLATE.md  fin.md  ltr.md  spm.md  tla.md  tmt.md
scripts/: cleanup_queries.py  foil_price_diff.py  rehearse_migration.py  survey_treatment_signature.py
src/magic_manager/: __init__.py  cli.py  db.py  decks.py  intake.py  inventory.py  lists.py  mtgjson.py  parsers.py  scryfall.py  selectors.py  sets.py  treatments.py  wishlist.py
src/magic_manager/exports/: __init__.py  archidekt.py  moxfield.py  plain.py  scryfall_json.py  tcgplayer.py
